[FIX] sap.m.MenuButton: Arrow icon now visible in footer
BCP: 2080291615

--- a/src/sap.m/src/sap/m/themes/base/MenuButton.less
+++ b/src/sap.m/src/sap/m/themes/base/MenuButton.less
@@ -93,7 +93,6 @@
 
 //Transparent(footer)
 .sapMIBar-CTX.sapMFooter-CTX .sapMMenuBtn.sapMMenuBtnRegular .sapMBtnInner::after {
-	color: @sapUiContentContrastIconColor;
 	text-shadow: @sapUiButtonEmphasizedTextShadow;
 }
 
